objects/fferpcore__ff_Engagement__c.object
<CustomObject>
    <customHelpPage>fferpcore__EngagementObjectHelp</customHelpPage>
    <description>Represents a single customer engagement that can include multiple revenue streams. Provides a 360-degree view of the current status of an engagement, enabling you to report on and analyze the relevant data, as well as monitor the entire life-cycle of your interaction with a given customer.</description>
    <fields>
        <fullName>fferpcore__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer account this engagement relates to.</description>
        <inlineHelpText>Customer account this engagement relates to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <description>Description of the engagement.</description>
        <inlineHelpText>Description of the engagement.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__EndDate__c</fullName>
        <description>Date on which the engagement ends.</description>
        <inlineHelpText>Date on which the engagement ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fferpcore__StartDate__c</fullName>
        <description>Date on which the engagement starts.</description>
        <inlineHelpText>Date on which the engagement starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Account__c</columns>
        <columns>fferpcore__StartDate__c</columns>
        <columns>fferpcore__EndDate__c</columns>
        <columns>fferpcore__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENG{0000000}</displayFormat>
        <label>Engagement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>